--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Memoirs-of-Jacques-Casanova-de-Seingalt-1725-1798.-Complete_2981
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   translator:
     agent_name: Machen, Arthur
@@ -10,13 +10,7 @@ contributor:
     wikipedia: http://en.wikipedia.org/wiki/Arthur_Machen
 covers:
 - cover_type: archival
-  image_path: 2981/2981-h/images/cover.jpg
-  rights: Public domain in the USA.
-  rights_url: http://creativecommons.org/about/pdm
-- cover_type: archival
-  image_path: 2981/2981-h/images/cover1th.jpg
-  rights: Public domain in the USA.
-  rights_url: http://creativecommons.org/about/pdm
+  image_path: 2981-h/images/cover.jpg
 creator:
   author:
     agent_name: Casanova, Giacomo
@@ -29,6 +23,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1075
     wikipedia: http://en.wikipedia.org/wiki/Giacomo_Casanova
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2981#The-Memoirs-of-Jacques-Casanova-de-Seingalt-1725-1798.-Complete
 gutenberg_bookshelf:
 - Germany
 - Banned Books from Anne Haight's list
